<resources>
    <string name="app_name">HomeLearnersGuide</string>
    <string name="google_classroom">Google Classroom</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="learning_system">Learning System</string>
    <string name="RAD">RAD Learning developed for students who live far and need to travel for hours to get to school.</string>
    <string name="FLEX">FLEX Learning is a combination of face-to-face sessions and distance learning.</string>
    <string name="rad">RAD</string>
    <string name="flex">FLEX</string>

    <string name="next">NEXT</string>
    <string name="orientation">ORIENTATION</string>
    <string name="message">MESSAGE</string>
    <string name="connect">CONNECT</string>
    <string name="juan_delacruz">Juan DelaCruz</string>
    <string name="section">SECTION</string>
    <string name="form">FORM</string>
    <string name="student_number">Student Number</string>
    <string name="name">Name</string>
    <string name="submit">SUBMIT</string>
    <string name="formname">NAME</string>
    <string name="form_student_number">STUDENT NUMBER</string>
    <string name="form_year">YEAR</string>
    <string name="form_learning_system">LEARNING SYSTEM</string>
    <string name="facebook_groups">Facebook Groups</string>
    <string name="facebook">FACEBOOK</string>
    <string name="classroom">CLASSROOM</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="image4">image4</string>
    <string name="image5">image5</string>
    <string name="learning_sys">Learning System</string>
    <string name="textview">TextView</string>
    <string name="message2">MESSAGE</string>


    <string name="textview1">
        BSIT 01 - ITE 301 Quantitative Method
    </string>

    <string name="year">YEAR</string>

    <string name="_1st_year">1ST YEAR</string>
    <string name="_2nd_year">2ND YEAR</string>
    <string name="_3rd_year">3RD YEAR</string>
    <string name="_4th_year">4TH YEAR</string>
    <string name="sectionview">SECTION</string>
    <string name="fb_1_01">BSIT 01</string>
    <string name="fb_1_02">BSIT 02</string>
    <string name="fb_1_03">BSIT 03</string>
    <string name="fb_1_04">BSIT 04</string>
    <string name="fb_1_05">BSIT 05</string>
    <string name="fb_1_06">BSIT 06</string>
    <string name="sec1">BSIT 01</string>
    <string name="sec2">BSIT 02</string>
    <string name="sec3">BSIT 03</string>

    <string name="sec4">BSIT 04</string>
    <string name="sec5">BSIT 05</string>
    <string name="sec6">BSIT 06</string>
    <string name="addbutton">ADD USER</string>
    <string name="formemail">EMAIL</string>
    <string name="addsub">CONNECT</string>
    <string name="logout">Logout</string>

    <string name="orient">ORIENTATION</string>
    <string name="addstudent">ADD STUDENT</string>
    <string name="addteacher">ADD TEACHER</string>
    <string name="student">STUDENT</string>
    <string name="teacher">TEACHER</string>

    <string-array name="year">
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
    </string-array>

    <string-array name="section">
        <item>BSIT 01</item>
        <item>BSIT 02</item>
        <item>BSIT 03</item>
        <item>BSIT 04</item>
        <item>BSIT 05</item>
        <item>BSIT 06</item>
    </string-array>

    <string-array name="learningSystem">

        <item>RAD</item>
        <item>FLEX</item>

    </string-array>
</resources>