<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin"
    android:background="@drawable/bgcolor">


    <Button
        android:id="@+id/adduser"
        android:layout_width="336dp"
        android:layout_height="84dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttondesign"
        android:elevation="10dp"
        android:text="@string/addbutton"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutadmin" />

    <Button
        android:elevation="10dp"
        android:textStyle="bold"
        android:background="@drawable/buttondesign"
        android:textSize="25sp"
        android:id="@+id/ConnectBtn"
        android:layout_width="336dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/addsub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adduser" />

    <Button
        android:elevation="10dp"
        android:textStyle="bold"
        android:background="@drawable/buttondesign"
        android:textSize="25sp"
        android:id="@+id/OrientBtn"
        android:layout_width="336dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/orient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConnectBtn" />

    <Button
        android:id="@+id/logoutadmin"
        android:layout_width="102dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>